<resources>
    <string name="app_name">WakeMeInTime</string>
    <string name="myCalendars">Meine Kalendar</string>
    <string name="calendarName"></string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main">WakeMeInTime</string>
    <string name="logo_login_small">WMIT Logo</string>
    <string name="title_activity_main">Main(WMIT)</string>

    <!-- Strings related to Settings -->

    <!-- Morning Routine settings -->
    <string name="pref_header_morningroutine">Morning Routine</string>


    <string name="pref_title_display_name">Wakeup message</string>
    <string name="pref_default_display_name">Have a wonderful Day! </string>

    <string name="pref_title_time_between_wakeup_and_departure">Time between wakeup and departure</string>
    <string-array name="times_5_to_90_Mins_list_titles">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
        <item>1,5 hours</item>
    </string-array>
    <string-array name="times_5_to_90_Mins_list_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>90</item>
    </string-array>

    <!-- Example settings for Transportation -->
    <string name="pref_header_transportation">Transportation</string>

    <string name="pref_title_travel_method">choose travel method</string>
    <string-array name="pref_travel_method_titles">
        <item>Fastest method</item>
        <item>Car</item>
        <item>Train</item>
    </string-array>
    <string-array name="pref_travel_method_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>

    </string-array>

    <!-- Example settings for Alarms -->
    <string name="pref_header_alarms">Alarms</string>

    <string name="pref_title_new_message_notifications">Use custom alarm settings</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="alarm_repeat_amount_value">5</string>
    <string name="title_Alarm_repeat_amount">Alarm repeat amount</string>
    <string name="title_Alarm_repeat_time">Alarm repeat time</string>
    <string name="alarm_repeat_time_value">5</string>
    <string name="settings_button">Settings</string>
    <string name="login_button">Login</string>
    <string name="choose_calendar_button">Choose calendar</string>

    <string name="title_text">WakeMeInTime - Sign in with Google</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">999290191215-bdnuog5hg6scqukidt2ib1rminccoeq0.apps.googleusercontent.com</string>
</resources>
