<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_message_notifications" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_new_message"
        android:key="alarm_ringtone"
        android:ringtoneType="alarm"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate" />

    <EditTextPreference
        android:defaultValue="@string/alarm_repeat_time_value"
        android:dependency="notifications_new_message"
        android:inputType="time"
        android:key="alarm_repeat_time"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/title_Alarm_repeat_time" />


    <EditTextPreference
        android:defaultValue="@string/alarm_repeat_amount_value"
        android:dependency="notifications_new_message"
        android:key="alarm_repeat_amount"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/title_Alarm_repeat_amount" />

</PreferenceScreen>
